--- a/test.html
+++ b/test.html
@@ -3,115 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>test</title>
-    <link href="https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&display=swap" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/daisyui@4.12.10/dist/full.min.css" rel="stylesheet" type="text/css" />
-    <script src="https://cdn.tailwindcss.com"></script>
+    <title>Document</title>
 </head>
 <body>
-    <main class="sticky top-0 shadow-sm">
-        <nav class=" flex justify-around items-center bg-[#F9F7F3]  pt-3 pb-10">
-            <button class="btn btn-active  bg-[#B4F461] hover:bg-[#a1e84f] border-none font-semibold text-xl text-[#111111]"><a href="blog.html">Blog</a></button>
-            <div class=" flex items-center gap-2">
-                <img src="assets/logo.png" alt="" >
-                <span class="font-semibold text-2xl text-[#111111] ">Donate Bangladesh</span>
-            </div>
-            <div class="flex items-center gap-1">
-                <img src="assets/coin.png" alt="" >
-                <span class="font-medium text-xl text-[#111111]">5500</span>
-                <span class="font-medium text-xl text-[#111111]">BDT</span>
-            </div>
-        </nav>
-        <div class="flex justify-center gap-3 pt-20 pb-8">
-            <button class="btn btn-success bg-[#B4F461] hover:bg-[#a1e84f] border-none font-semibold text-xl text-[#111111]">Donation</button>
-            <button class="btn btn-success bg-[#B4F461] hover:bg-[#a1e84f] border-none font-semibold text-xl text-[#111111]">History</button>
-        </div>
-    </main>
-    <section>
-        <div class="flex max-w-4xl shadow-lg bg-white mx-auto border-2 border-[#E7E7E7] rounded-lg p-4 mb-5">
-            <div class="w-1/2"><img src="assets/noakhali.png" alt=""></div>
-            <div class="flex w-1/2 flex-col justify-between pl-6">
-                <div class=" items-center bg-[#F9F7F3] p-2 rounded-lg flex gap-1">
-                    <img src="assets/coin.png" alt="">
-                    <span class="font-normal text-base text-[#111111]">0</span>
-                    <span class="font-normal text-base text-[#111111]">BDT</span>
-                </div>
-                <h3 class="text-[#111111]  font-bold text-xl my-1">Donate for Flood at Noakhali, Bangladesh</h3>
-                <p class="text-[#111111]  font-normal text-opacity-70 text-sm"> The recent floods in Noakhali have caused significant
-                     damage to homes  infrastructure. Your donation will 
-                     help provide essential supplies and  to those affected
-                      by this disaster. Every contribution, big or small,
-                       makes  difference. Please join us
-                     in supporting the relief efforts and making a positive
-                      impact on the lives of those in need.
-                </p>
-                <input type="text" placeholder="Write Donation Amount" class="input input-bordered w-full " />
-                <div><button class="btn btn-success  bg-[#B4F461] hover:bg-[#a1e84f] border-none w-full font-semibold text-xl">Donate Now</button></div>
-            </div>
-        </div>
-        <div class="flex max-w-4xl shadow-lg bg-white mx-auto border-2 border-[#E7E7E7] rounded-lg p-4 mb-5">
-            <div class="w-1/2"><img src="assets/feni.png" alt=""></div>
-            <div class="flex w-1/2 flex-col justify-between pl-6">
-                <div class=" items-center bg-[#F9F7F3] p-2 rounded-lg flex gap-1">
-                    <img src="assets/coin.png" alt="">
-                    <span class="font-normal text-base text-[#111111]">600</span>
-                    <span class="font-normal text-base text-[#111111]">BDT</span>
-                </div>
-                <h3 class="text-[#111111]  font-bold text-xl my-1">Donate for Flood Relief in Feni,Bangladesh</h3>
-                <p class="text-[#111111]  font-normal text-opacity-70 "> The recent floods in Feni have caused significant
-                     damage to homes  infrastructure. Your donation will 
-                     help provide essential supplies and  to those affected
-                      by this disaster. Every contribution, big or small,
-                       makes  difference. Please join us
-                     in supporting the relief efforts and making a positive
-                      impact on the lives of those in need.
-                </p>
-                <input type="text" placeholder="Write Donation Amount" class="input input-bordered w-full " />
-                <div><button class="btn btn-success  bg-[#B4F461] hover:bg-[#a1e84f] border-none w-full font-semibold text-xl">Donate Now</button></div>
-            </div>
-        </div>
-        <div class="flex max-w-4xl shadow-lg bg-white mx-auto border-2 border-[#E7E7E7] rounded-lg p-4 mb-5 ">
-            <div class="w-1/2"><img src="assets/quota-protest.png" alt=""></div>
-            <div class="flex w-1/2 flex-col justify-between pl-6">
-                <div class=" items-center bg-[#F9F7F3] p-2 rounded-lg flex gap-1">
-                    <img src="assets/coin.png" alt="">
-                    <span class="font-normal text-base text-[#111111]">2400</span>
-                    <span class="font-normal text-base text-[#111111]">BDT</span>
-                </div>
-                <h3 class="text-[#111111]  font-bold text-xl my-1">Aid for Injured in the Quota Movement</h3>
-                <p class="text-[#111111]  font-normal text-opacity-70 text-sm">The recent Quota movement has resulted in
-                     numerous injuries and significant hardship for many individuals. Your support is crucial in providing 
-                     medical assistance, rehabilitation, and necessary supplies to those affected. By contributing, you help
-                      ensure that injured individuals receive the care and support they need during this challenging time.
-                       Every donation plays a vital role in alleviating their suffering and aiding in their recovery.
-                        Please consider making a donation to support these brave individuals in their time of need.
-                </p>
-                <input type="text" placeholder="Write Donation Amount" class="input input-bordered w-full " />
-                <div><button class="btn btn-success  bg-[#B4F461] hover:bg-[#a1e84f] border-none w-full font-semibold text-xl">Donate Now</button></div>
-            </div>
-        </div>
-    </section>
-    <section class="flex justify-center items-center h-screen">
-        <!-- Open the modal using ID.showModal() method -->
-        <button class="btn bg-[#B4F461] hover:bg-[#a1e84f] border-none  font-semibold text-xl" onclick="my_modal_1.showModal()">Donate Now</button>
-    
-        <dialog id="my_modal_1" class="modal">
-            <div class="modal-box flex flex-col justify-center items-center text-center">
-                <h3 class="text-4xl font-bold text-[#111111]">Congrats!</h3>
-                <div class="justify-center items-center py-4">
-                    <img src="assets/coin.png" alt="" class="mx-auto">
-                </div>
-                <p class="py-4 text-[#111111] font-medium text-base">You Have Donated For Humankind</p>
-                <span class="font-semibold text-[#111111] text-xl">Successfully</span>
-                <div class="modal-action">
-                    <form method="dialog">
-                        <!-- if there is a button in form, it will close the modal -->
-                        <button class="btn font-normal text-[#111111] text-base">Close</button>
-                    </form>
-                </div>
-            </div>
-        </dialog>
-    </section>
     
 </body>
 </html>
