--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <main class="sticky top-0 backdrop-blur-md">
-        <nav class=" flex justify-around items-center bg-[#F9F7F3]  pt-3 pb-10">
+        <nav class=" flex flex-col md:flex-row  justify-around items-center bg-[#F9F7F3]  pt-3 pb-10">
             <button id="blog-btn" class="btn btn-active  bg-[#B4F461] hover:bg-[#a1e84f] border-none font-semibold text-xl text-[#111111]">Blog</button>
             <div class=" flex items-center gap-2">
                 <img src="assets/logo.png" alt="" >
@@ -30,16 +30,16 @@
     </main>
     <section id="index" class="">
         <!-- card-1 -->
-        <div class="flex max-w-4xl shadow-lg bg-white mx-auto border-2 border-[#E7E7E7] rounded-lg p-4 mb-5">
-            <div class="w-1/2"><img src="assets/noakhali.png" alt=""></div>
-            <div class="flex w-1/2 flex-col justify-between pl-6">
-                <div class=" items-center bg-[#F9F7F3] p-2 rounded-lg flex gap-1">
-                    <img src="assets/coin.png" alt="">
-                    <span id="flood-balance" class="font-normal text-base text-[#111111]">3000</span>
+        <div class="flex flex-col md:flex-row max-w-4xl  shadow-lg bg-white mx-auto border-2 border-[#E7E7E7] rounded-lg p-4 mb-5">
+            <div class="w-full md:w-1/2"><img src="assets/noakhali.png"  alt=""></div>
+            <div class="flex w-full md:w-1/2 flex-col  pl-6">
+                <div class="w-1/3 items-center bg-[#F9F7F3] p-2 rounded-lg flex gap-1 ">
+                    <img src="assets/coin.png" class="" alt="">
+                    <span id="flood-balance-1" class="font-normal text-base text-[#111111]">3000</span>
                     <span class="font-normal text-base text-[#111111]">BDT</span>
                 </div>
-                <h3 class="text-[#111111]  font-bold text-xl my-1">Donate for Flood at Noakhali, Bangladesh</h3>
-                <p class="text-[#111111]  font-normal text-opacity-70 text-sm"> The recent floods in Noakhali have caused significant
+                <h3 class="text-[#111111]  font-bold text-lg md:text-xl my-1 text-center md:text-left">Donate for Flood at Noakhali, Bangladesh</h3>
+                <p class="text-[#111111]  font-normal text-opacity-70 text-sm text-center md:text-left"> The recent floods in Noakhali have caused significant
                      damage to homes  infrastructure. Your donation will 
                      help provide essential supplies and  to those affected
                       by this disaster. Every contribution, big or small,
@@ -47,21 +47,21 @@
                      in supporting the relief efforts and making a positive
                       impact on the lives of those in need.
                 </p>
-                <input id="input-amount-1" type="text" placeholder="Write Donation Amount" class="input input-bordered w-full " />
+                <input id="input-amount-1" type="text" placeholder="Write Donation Amount" class="input input-bordered  w-full my-3" />
                 <div><button id="btn-addMoney-1" class="btn btn-success  bg-[#B4F461] hover:bg-[#a1e84f] border-none w-full font-semibold text-xl ">Donate Now</button></div>
             </div>
         </div>
         <!-- card-2 -->
-        <div class="flex max-w-4xl shadow-lg bg-white mx-auto border-2 border-[#E7E7E7] rounded-lg p-4 mb-5">
-            <div class="w-1/2"><img src="assets/feni.png" alt=""></div>
-            <div class="flex w-1/2 flex-col justify-between pl-6">
-                <div class=" items-center bg-[#F9F7F3] p-2 rounded-lg flex gap-1">
+        <div class="flex flex-col md:flex-row max-w-4xl shadow-lg bg-white mx-auto border-2 border-[#E7E7E7] rounded-lg p-4 mb-5">
+            <div class="w-full md:w-1/2"><img src="assets/feni.png" alt=""></div>
+            <div class="flex w-full md:w-1/2 flex-col  pl-6">
+                <div class="w-1/3 items-center bg-[#F9F7F3] p-2 rounded-lg flex gap-1">
                     <img src="assets/coin.png" alt="">
-                    <span id="feni-balance" class="font-normal text-base text-[#111111]">1200</span>
+                    <span id="feni-balance-2" class="font-normal text-base text-[#111111]">1200</span>
                     <span class="font-normal text-base text-[#111111]">BDT</span>
                 </div>
-                <h3 class="text-[#111111]  font-bold text-xl my-1">Donate for Flood Relief in Feni,Bangladesh</h3>
-                <p class="text-[#111111]  font-normal text-opacity-70 "> The recent floods in Feni have caused significant
+                <h3 class="text-[#111111]  font-bold text-xl my-1 text-center md:text-left">Donate for Flood Relief in Feni,Bangladesh</h3>
+                <p class="text-[#111111]  font-normal text-opacity-70 text-center md:text-left"> The recent floods in Feni have caused significant
                      damage to homes  infrastructure. Your donation will 
                      help provide essential supplies and  to those affected
                       by this disaster. Every contribution, big or small,
@@ -69,63 +69,63 @@
                      in supporting the relief efforts and making a positive
                       impact on the lives of those in need.
                 </p>
-                <input id="input-amount-2" type="text" placeholder="Write Donation Amount" class="input input-bordered w-full " />
+                <input id="input-amount-2" type="text" placeholder="Write Donation Amount" class="input input-bordered w-full my-3 " />
                 <div><button id="btn-addMoney-2" class="btn btn-success  bg-[#B4F461] hover:bg-[#a1e84f] border-none w-full font-semibold text-xl">Donate Now</button></div>
             </div>
         </div>
         <!-- card-3 -->
-        <div class="flex max-w-4xl shadow-lg bg-white mx-auto border-2 border-[#E7E7E7] rounded-lg p-4 mb-5 ">
-            <div class="w-1/2"><img src="assets/quota-protest.png" alt=""></div>
-            <div class="flex w-1/2 flex-col justify-between pl-6">
-                <div class=" items-center bg-[#F9F7F3] p-2 rounded-lg flex gap-1">
+        <div class="flex flex-col md:flex-row max-w-4xl shadow-lg bg-white mx-auto border-2 border-[#E7E7E7] rounded-lg p-4 mb-5 ">
+            <div class="w-full md:w-1/2"><img src="assets/quota-protest.png" alt=""></div>
+            <div class="flex w-full md:w-1/2 flex-col  pl-6">
+                <div class="w-1/3 items-center bg-[#F9F7F3] p-2 rounded-lg flex gap-1">
                     <img src="assets/coin.png" alt="">
-                    <span id="quata-balance" class="font-normal text-base text-[#111111]">2500</span>
+                    <span id="quata-balance-3" class="font-normal text-base text-[#111111]">2500</span>
                     <span class="font-normal text-base text-[#111111]">BDT</span>
                 </div>
-                <h3 class="text-[#111111]  font-bold text-xl my-1">Aid for Injured in the Quota Movement</h3>
-                <p class="text-[#111111]  font-normal text-opacity-70 text-sm">The recent Quota movement has resulted in
+                <h3 class="text-[#111111]  font-bold text-xl my-1 text-center md:text-left">Aid for Injured in the Quota Movement</h3>
+                <p class="text-[#111111]  font-normal text-opacity-70 text-sm text-center md:text-left">The recent Quota movement has resulted in
                      numerous injuries and significant hardship for many individuals. Your support is crucial in providing 
                      medical assistance, rehabilitation, and necessary supplies to those affected. By contributing, you help
                       ensure that injured individuals receive the care and support they need during this challenging time.
                        Every donation plays a vital role in alleviating their suffering and aiding in their recovery.
                         Please consider making a donation to support these brave individuals in their time of need.
                 </p>
-                <input id="input-amount-3" type="text" placeholder="Write Donation Amount" class="input input-bordered w-full " />
+                <input id="input-amount-3" type="text" placeholder="Write Donation Amount" class="input input-bordered w-full my-3" />
                 <div><button id="btn-addMoney-3" class="btn btn-success  bg-[#B4F461] hover:bg-[#a1e84f] border-none w-full font-semibold text-xl">Donate Now</button></div>
             </div>
         </div>
         <!-- card-4 -->
-        <div class="flex max-w-4xl shadow-lg bg-white mx-auto border-2 border-[#E7E7E7] rounded-lg p-4 mb-5 ">
-            <div class="w-1/2"><img src="assets/rohingya1.jpg" class="rounded-lg" alt=""></div>
-            <div class="flex w-1/2 flex-col justify-between pl-6">
-                <div class=" items-center bg-[#F9F7F3] p-2 rounded-lg flex gap-1">
+        <div class="flex flex-col md:flex-row max-w-4xl shadow-lg bg-white mx-auto border-2 border-[#E7E7E7] rounded-lg p-4 mb-5 ">
+            <div class="w-full md:w-1/2"><img src="assets/rohingya1.jpg" class="rounded-lg" alt=""></div>
+            <div class="flex w-full md:w-1/2 flex-col  pl-6">
+                <div class="w-1/3 items-center bg-[#F9F7F3] p-2 rounded-lg flex gap-1">
                     <img src="assets/coin.png" alt="">
-                    <span id="refugee-balance" class="font-normal text-base text-[#111111]">1200</span>
+                    <span id="refugee-balance-4" class="font-normal text-base text-[#111111]">1200</span>
                     <span class="font-normal text-base text-[#111111]">BDT</span>
                 </div>
-                <h3 class="text-[#111111]  font-bold text-xl my-1">Food for Rohingya Refugee</h3>
-                <p class="text-[#111111]  font-normal text-opacity-70 text-sm">The ration still falls short of meeting 
+                <h3 class="text-[#111111]  font-bold text-xl my-1 text-center md:text-left">Food for Rohingya Refugee</h3>
+                <p class="text-[#111111]  font-normal text-opacity-70 text-sm text-center md:text-left">The ration still falls short of meeting 
                     their minimum energy and nutritional requirements. Violence, insecurity, and human trafficking are
                      increasing concerns in the refugee camps. Amidst fires, cyclones, and floods, 2023 also saw the
                       highest number of Rohingya embarking on dangerous boat journeys. Nearly 4,500 attempted to across 
                       the Andaman Sea and Bay of Bengal, in the hope of finding a better life. At least 569 of them 
                       lost their lives.
                 </p>
-                <input id="input-amount-4" type="text" placeholder="Write Donation Amount" class="input input-bordered w-full " />
+                <input id="input-amount-4" type="text" placeholder="Write Donation Amount" class="input input-bordered w-full my-3 " />
                 <div><button id="btn-addMoney-4" class="btn btn-success  bg-[#B4F461] hover:bg-[#a1e84f] border-none w-full font-semibold text-xl">Donate Now</button></div>
             </div>
         </div>
         <!-- card-5 -->
-        <div class="flex max-w-4xl shadow-lg bg-white mx-auto border-2 border-[#E7E7E7] rounded-lg p-4 mb-5 ">
-            <div class="w-1/2"><img src="assets/medical.jpg" class="rounded-lg" alt=""></div>
-            <div class="flex w-1/2 flex-col justify-between pl-6">
-                <div class=" items-center bg-[#F9F7F3] p-2 rounded-lg flex gap-1">
+        <div class="flex flex-col md:flex-row max-w-4xl shadow-lg bg-white mx-auto border-2 border-[#E7E7E7] rounded-lg p-4 mb-5 ">
+            <div class="w-full md:w-1/2"><img src="assets/medical.jpg" class="rounded-lg" alt=""></div>
+            <div class="flex w-full md:w-1/2 flex-col  pl-6">
+                <div class="w-1/3 items-center bg-[#F9F7F3] p-2 rounded-lg flex gap-1">
                     <img src="assets/coin.png" alt="">
-                    <span id="medical-balance" class="font-normal text-base text-[#111111]">1500</span>
+                    <span id="medical-balance-5" class="font-normal text-base text-[#111111]">1500</span>
                     <span class="font-normal text-base text-[#111111]">BDT</span>
                 </div>
-                <h3 class="text-[#111111]  font-bold text-xl my-1">Healthcare and Medical Aid</h3>
-                <p class="text-[#111111]  font-normal text-opacity-70 text-sm">Hospitals in Bangladesh play a vital 
+                <h3 class="text-[#111111]  font-bold text-xl my-1 text-center md:text-left">Healthcare and Medical Aid</h3>
+                <p class="text-[#111111]  font-normal text-opacity-70 text-sm text-center md:text-left">Hospitals in Bangladesh play a vital 
                     role in the country's healthcare system,
                      providing essential medical services to the population. With a growing emphasis on 
                      improving healthcare infrastructure, Bangladesh has made significant progress in
@@ -133,7 +133,7 @@
                       Health Organization (WHO),[11] as of 2021, there were approximately 5,146 hospitals
                        in Bangladesh, including both public and private institutions.
                 </p>
-                <input id="input-amount-5" type="text" placeholder="Write Donation Amount" class="input input-bordered w-full " />
+                <input id="input-amount-5" type="text" placeholder="Write Donation Amount" class="input input-bordered w-full my-3" />
                 <div><button id="btn-addMoney-5" class="btn btn-success  bg-[#B4F461] hover:bg-[#a1e84f] border-none w-full font-semibold text-xl">Donate Now</button></div>
             </div>
         </div>
