--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
     <section id="index" class="">
         <!-- card-1 -->
         <div class="flex flex-col md:flex-row max-w-4xl  shadow-lg bg-white mx-auto border-2 border-[#E7E7E7] rounded-lg p-4 mb-5">
-            <div class="w-full md:w-1/2"><img src="assets/noakhali.png"  alt=""></div>
-            <div class="flex w-full md:w-1/2 flex-col  pl-6">
-                <div class="w-1/3 items-center bg-[#F9F7F3] p-2 rounded-lg flex gap-1 ">
+            <div class="w-full md:w-1/2 md:mb-0 mb-3"><img src="assets/noakhali.png"  alt=""></div>
+            <div class="flex w-full md:w-1/2 flex-col  pl-6 ">
+                <div class="w-1/3  bg-[#F9F7F3] p-2 rounded-lg flex gap-1 ">
                     <img src="assets/coin.png" class="" alt="">
                     <span id="flood-balance-1" class="font-normal text-base text-[#111111]">3000</span>
                     <span class="font-normal text-base text-[#111111]">BDT</span>
@@ -53,7 +53,7 @@
         </div>
         <!-- card-2 -->
         <div class="flex flex-col md:flex-row max-w-4xl shadow-lg bg-white mx-auto border-2 border-[#E7E7E7] rounded-lg p-4 mb-5">
-            <div class="w-full md:w-1/2"><img src="assets/feni.png" alt=""></div>
+            <div class="w-full md:w-1/2 md:mb-0 mb-3"><img src="assets/feni.png" alt=""></div>
             <div class="flex w-full md:w-1/2 flex-col  pl-6">
                 <div class="w-1/3 items-center bg-[#F9F7F3] p-2 rounded-lg flex gap-1">
                     <img src="assets/coin.png" alt="">
@@ -75,7 +75,7 @@
         </div>
         <!-- card-3 -->
         <div class="flex flex-col md:flex-row max-w-4xl shadow-lg bg-white mx-auto border-2 border-[#E7E7E7] rounded-lg p-4 mb-5 ">
-            <div class="w-full md:w-1/2"><img src="assets/quota-protest.png" alt=""></div>
+            <div class="w-full md:w-1/2 md:mb-0 mb-3"><img src="assets/quota-protest.png" alt=""></div>
             <div class="flex w-full md:w-1/2 flex-col  pl-6">
                 <div class="w-1/3 items-center bg-[#F9F7F3] p-2 rounded-lg flex gap-1">
                     <img src="assets/coin.png" alt="">
@@ -96,7 +96,7 @@
         </div>
         <!-- card-4 -->
         <div class="flex flex-col md:flex-row max-w-4xl shadow-lg bg-white mx-auto border-2 border-[#E7E7E7] rounded-lg p-4 mb-5 ">
-            <div class="w-full md:w-1/2"><img src="assets/rohingya1.jpg" class="rounded-lg" alt=""></div>
+            <div class="w-full md:w-1/2 md:mb-0 mb-3"><img src="assets/rohingya1.jpg" class="rounded-lg" alt=""></div>
             <div class="flex w-full md:w-1/2 flex-col  pl-6">
                 <div class="w-1/3 items-center bg-[#F9F7F3] p-2 rounded-lg flex gap-1">
                     <img src="assets/coin.png" alt="">
@@ -117,7 +117,7 @@
         </div>
         <!-- card-5 -->
         <div class="flex flex-col md:flex-row max-w-4xl shadow-lg bg-white mx-auto border-2 border-[#E7E7E7] rounded-lg p-4 mb-5 ">
-            <div class="w-full md:w-1/2"><img src="assets/medical.jpg" class="rounded-lg" alt=""></div>
+            <div class="w-full md:w-1/2 md:mb-0 mb-3"><img src="assets/medical.jpg" class="rounded-lg" alt=""></div>
             <div class="flex w-full md:w-1/2 flex-col  pl-6">
                 <div class="w-1/3 items-center bg-[#F9F7F3] p-2 rounded-lg flex gap-1">
                     <img src="assets/coin.png" alt="">
